create a navbar component and include it in posts and postdetail views

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+li.nav-item {
+  list-style: none;
+}
+
+Navbar{
+  display: 'block'; 
+  width: 550;
+   padding: 30
+}
